syntax = "proto3";

message CommandRequest {
    string cmdName = 1;
    string sessionId = 2;
    repeated string urlParams = 3;
    bytes jsonParams = 4;
}

message CommandResponse {
    oneof response {
        SuccessResponse success = 1;
        ErrorResponse error = 2;
    }
}

message SuccessResponse {
    bytes jsonValue = 1;
}

message ErrorResponse {
    string error = 1;
    string msg = 2;
    string stacktrace = 3;
}

service RunCommand {
    rpc Run (CommandRequest) returns (CommandResponse);
}
